fix: img overflow friend

--- a/src/assets/styles/components/friends.scss
+++ b/src/assets/styles/components/friends.scss
@@ -78,6 +78,7 @@
             background-repeat: no-repeat;
             border-radius: 50%;
             margin-right: 1rem;
+            overflow: hidden;
 
             @media (max-width: $md) {
                 width: 2.5rem;
